app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlapps
  annotations:
    argocd.argoproj.io/sync: "true"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
