app/deployment-object-detection-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: object-detection-app
  labels:
    app: object-detection-app
    app.kubernetes.io/component: object-detection-app
    app.kubernetes.io/instance: object-detection-app
    app.kubernetes.io/name: object-detection-app
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-detection-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: object-detection-app
        deploymentconfig: object-detection-app
    spec:
      containers:
        - name: object-detection-app
          image: image-registry.openshift-image-registry.svc:5000/apps-mlapps/object-detection-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
