app/deployment-object-detection-rest.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: object-detection-rest
  labels:
    app: object-detection-rest
    app.kubernetes.io/component: object-detection-rest
    app.kubernetes.io/instance: object-detection-rest
    app.kubernetes.io/name: object-detection-rest
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-detection-rest
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: object-detection-rest
        deploymentconfig: object-detection-rest
    spec:
      containers:
        - name: object-detection-rest
          image: image-registry.openshift-image-registry.svc:5000/mlapps/object-detection-rest:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
