app/route-object-detection-app.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: object-detection-app
  labels:
    app: object-detection-app
    app.kubernetes.io/component: object-detection-app
    app.kubernetes.io/instance: object-detection-app
    app.kubernetes.io/name: object-detection-app
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"object-detection-rest"}]
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: object-detection-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
